pre molde pronto

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -180,7 +180,7 @@ section.sec4{
 }
 
 section.sec5{
-    background-color: rgba(23,23,23);
+    background-color: rgb(23,23,23);
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
