Criaçao dos subelementos

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,12 +5,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color:ghostwhite;
 }
-
-
-
-
-
 
 
 
@@ -193,5 +189,3 @@ footer.rodape{
     background-attachment: fixed;
 
 }
-
-
