--- a/css/estilo.css
+++ b/css/estilo.css
@@ -224,11 +224,15 @@ section h2 a{
 section h2{
   width: 100%;
   height: 10.5%;
+  padding-top: 3%;
+  padding-left: 3%;
 }
 
 section p{
   height: 85%;
-  width: 55%;
+  width: 65%;
   font-size: 4vh;
+  float: right;
+  text-align: justify;
 
 }
