--- a/css/estilo.css
+++ b/css/estilo.css
@@ -32,6 +32,9 @@ nav ul{
     margin-right: 25px;
     list-style: none;
     margin-top: 7%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 
 nav ul li{
@@ -77,7 +80,6 @@ label #sign-one, label #sign-two{
     height: 100vh;
 }
 
-
 #logo-b2w img{
     height: 25vh;
     margin-left: 5%;
@@ -106,45 +108,55 @@ label #sign-one, label #sign-two{
         width: 65px;
         height: 65px;
         background-image: url(../img/icons_menu/icone-tres-barrinhas.png);
+        position: fixed;
     }
+
     nav ul{
         position:fixed;
         width:100%;
         height: 100vh;
-        background:blue;
+        background:rgba(0, 0, 0, 0.8);
         top: 100px;
         left: 100%;
         text-align: center;
         transition: .5s;
         z-index: 10;
+        flex-direction: column;
     }
+
     nav ul li{
         display: block;
         margin: 40px 0;
         line-height: 30px;
     }
+
     nav ul li a{
+        position: relative;
+        padding: 5px 0;
         font-size: 20px;
+        text-decoration: none;
     }
+
+
+
     #res-menu:checked ~ ul{
         left: 0;
     }
+
     #res-menu:checked ~ label .bars{
         display:none;
         transition: .5s;
+
     }
+
     #res-menu:checked ~ label .times{
         display:block;
         width: 65px;
         height: 65px;
-    }
-
-    #res-menu:checked ~ label .times{
         background-image: url(./../img/icons_menu/icone-fechar.png);
+        position: fixed;
     }
 }
-
-
 
 
 
@@ -158,19 +170,17 @@ header, section{
 footer{
     width: 100%;
     height: 20vh;
+    font-family: "Segoe UI", sans-serif;
 }
 
-header.head{
+.cabecalho{
     background: url(./../img/imgs/header.jpg);
-    background-position: center center;
     background-size: cover;
+    background-position: center;
     background-attachment: fixed;
+    z-index: 2;
 
 }
-
-
-
-
 
 section.sec4{
     background: url(./../img/imgs/section4.jpg);
@@ -193,11 +203,6 @@ section.sec4{
     width: 25%;
     height: 26vh;
 }
-
-
-
-
-
 
 
 
@@ -242,8 +247,9 @@ section p{
 
 
 
-/*Sessão 1*/
 
+
+/*Sessão 1*/
 
 section.sec1{
     background: url(./../img/imgs/section1.jpg);
@@ -268,6 +274,9 @@ section.sec1{
 .sec1 h2{
     text-align: -webkit-left;
 }
+
+
+
 
 
 
@@ -302,6 +311,10 @@ section.sec2{
 
 
 
+
+
+
+
 /*Sessão 3*/
 
 section.sec3{
@@ -332,9 +345,9 @@ section.sec3{
 
 
 
+
+
 /*Sessão 4*/
-
-
 
 .membro figure img{
     border-radius: 100%;
@@ -344,7 +357,7 @@ section.sec3{
 
 .membro figure figcaption{
     float: right;
-    text-align: justify;
+    text-align: -webkit-match-parent;
     width: 55%;
     font-size: 2vh;
     padding-left: 2%;
@@ -359,6 +372,13 @@ section.sec3{
 .membro{
     margin-right: 5%;
 }
+
+.membro h3{
+    color: deepskyblue;
+}
+
+
+
 
 
 /*Sessão 5*/
@@ -398,8 +418,6 @@ section.sec5{
     flex-wrap: nowrap;
 }
 
-
-
 .inputs{
     width: 60%;
     margin-left: 20%;
@@ -427,7 +445,6 @@ section.sec5{
     font-size: 2vh;
 }
 
-
 .inputs button{
     color: #fff;
     width: 30%;
@@ -440,6 +457,8 @@ section.sec5{
     font-size: 2vh;
     margin-top: 2%;
 }
+
+
 
 
 
@@ -472,8 +491,6 @@ section.sec5{
     margin-top: 3%;
 }
 
-
-
 .redes-socias{
     flex-grow: 1;
     display: flex;
@@ -481,7 +498,6 @@ section.sec5{
     flex-wrap: nowrap;
     padding-left: 10%;
 }
-
 
 .icones img{
     height: 12vh;
